Added new title track and new main game track. Unfortunately files are not playing as resources - have contacted nsquared about how they do this. In the meantime, this will have to do.

--- a/WizardWarzRotW/Properties/Resources.resx
+++ b/WizardWarzRotW/Properties/Resources.resx
@@ -199,4 +199,10 @@
   <data name="CharacterSheet_Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CharacterSheet_Right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Wizard_Warz_00" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Wizard_Warz_00.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Wizard_Warz_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Wizard_Warz_02.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
