Repush - accidentally added the non-edited version of the Main Track (Wizard_Warz_02), with a file size of 14mb. The mp3 is only about 2mb.

--- a/WizardWarzRotW/Properties/Resources.resx
+++ b/WizardWarzRotW/Properties/Resources.resx
@@ -203,6 +203,6 @@
     <value>..\Resources\Wizard_Warz_00.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Wizard_Warz_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Wizard_Warz_02.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\Wizard_Warz_02.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
