--- a/WizardWarzRotW/Properties/Resources.resx
+++ b/WizardWarzRotW/Properties/Resources.resx
@@ -205,4 +205,10 @@
   <data name="Wizard_Warz_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Wizard_Warz_02.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="DEstructible2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DEstructible2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="StoneTile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StoneTile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
