--- a/WizardWarzRotW/Properties/Resources.resx
+++ b/WizardWarzRotW/Properties/Resources.resx
@@ -190,4 +190,31 @@
   <data name="StoneTile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StoneTile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BombSheet_4step" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BombSheet_4step.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CentreExplosion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CentreExplosion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HorizontalExplosion_Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HorizontalExplosion_Right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CentreExplosionEnd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CentreExplosionEnd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HorizontalExplosion_End" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HorizontalExplosion_End.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HorizontalExplosion_Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HorizontalExplosion_Left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VerticalExplosion_Down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VerticalExplosion_Down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VerticalExplosion_End" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VerticalExplosion_End.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VerticalExplosion_Up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VerticalExplosion_Up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
